# LLV

./: CMakeLists.txt  Dockerfile  README.md  bench_microbenchmark  docker-compose.yml
bench/: microbenchmark.cpp
scripts/: plot_results.py  run_benchmark.sh
src/concurrency/: lock_manager_2pl.cpp  lock_manager_2pl.h  sca.cpp  sca.h  vll.cpp  vll.h
src/core/: record.h  vll_stman.cpp  vll_stman.h
src/network/: server.cpp  server.h
src/transaction/: transaction.h
